# cppBoilerplate

./: .gitignore  .gitmodules  Makefile.am  README.md  adding boost library.md  autogen.sh  configure.ac
src/: Makefile.am  app1main.cc
